Fixed Ranking and CSS.

--- a/M4_HTML_CSS_PE2_alumnes/M4_HTML_CSS_PE2 - ByApryed/assets/css/themes/default/commons.css
+++ b/M4_HTML_CSS_PE2_alumnes/M4_HTML_CSS_PE2 - ByApryed/assets/css/themes/default/commons.css
@@ -45,7 +45,7 @@
 		text-align:center;
 		list-style-type:none;
 	}
-	header, main, footer{
+	header, main, section, div, footer{
 		contain:content;
 	}
 	header{
