--- a/M4_HTML_CSS_PE2_alumnes/M4_HTML_CSS_PE2 - ByApryed/assets/css/themes/default/ranking.css
+++ b/M4_HTML_CSS_PE2_alumnes/M4_HTML_CSS_PE2 - ByApryed/assets/css/themes/default/ranking.css
@@ -1,11 +1,13 @@
 @layer ranking{
 	main{
+		display: block;
+	}
+	main section{
 		width:50vw;
 		background-color:var(--color2);
 		margin:30px auto;
 		display:block;
 		border:1px solid transparent;
-		min-height: 95vh;
 	}
 	table{
 		background-color:var(--color1);
