--- a/M4_HTML_CSS_PE2_alumnes/M4_HTML_CSS_PE2 - ByApryed/assets/css/themes/default/ranking.css
+++ b/M4_HTML_CSS_PE2_alumnes/M4_HTML_CSS_PE2 - ByApryed/assets/css/themes/default/ranking.css
@@ -8,6 +8,7 @@
 		margin:30px auto;
 		display:block;
 		border:1px solid transparent;
+		max-height: max-content;
 	}
 	table{
 		background-color:var(--color1);
